--- a/hw2/index.html
+++ b/hw2/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Оставьте свой отзыв</h1>
+
+    <textarea
+      id="reviewInput"
+      rows="5"
+      cols="50"
+      placeholder="Ваш отзыв..."
+    ></textarea>
+    <br />
+    <button id="submitReview">Отправить отзыв</button>
+
+    <div id="reviewContainer"></div>
     <script src="main.js"></script>
   </body>
 </html>
