--- a/hw3/index.html
+++ b/hw3/index.html
@@ -6,6 +6,30 @@
     <title>Document</title>
   </head>
   <body>
+    <form>
+      <label for="product">Название продукта</label>
+      <input
+        style="height: 50px"
+        placeholder="Введите название продукта"
+        type="text"
+        id="product"
+      /><br />
+      <br />
+      <br />
+      <label for="review"> Введите ваш отзыв</label>
+      <textarea
+        placeholder="Ваш отзыв"
+        style="height: 100px; width: 300px"
+        id="review"
+      ></textarea
+      ><br /><br /><br />
+      <button style="width: 150px; height: 75px" class="btn_review">
+        Отправить отзыв
+      </button>
+      <br /><br /><br /><br />
+      <a href="reviews.html">Перейти на страницу отзывов</a>
+    </form>
+
     <script src="main.js"></script>
   </body>
 </html>
